Fix SSE / eventing for Participants, Add unit&Integration tests for eventing